# reflect

./: README.md  pyproject.toml
api/: .gitignore  Procfile  README.md  docker-compose.yml  eval_baseline.py  eval_comparative.md  eval_comparative.py  manage.py  reflect_benchmark.py  reflect_benchmark_results.json  requirements.txt
api/datasets/: character_profiles.json  peter_parker_pipeline_inputs.json  peter_parker_skeleton.json  spider_man_parsed.json
api/events_api/: admin.py  apps.py  auth_views.py  character_analyzer.py  character_network.py  cluster_engine.py  context_assembly.py  conversation.py  coordinate_system.py  elevenlabs_client.py  graph_agent.py  graph_models.py  graph_sync.py  graph_tests.py  identity.py  import_parsers.py  insight_engine.py  journey_context.py  journey_scoring.py  journey_serializers.py  journey_views.py  live_conversation_service.py  live_graph.py  llm_client.py  llm_prompts.py  models.py  neo4j_client.py  ontology_data.py  pattern_engine.py  persona_config.py  reflection.py  reframe.py  safety.py  screenplay_parser.py  serializers.py  services.py  signal_engine.py  tests.py  trajectory.py  transcript_formatter.py  (+4 more)
api/events_api/migrations/: 0001_initial.py  (+1 more)
api/reflect_api/: asgi.py  settings.py  urls.py  wsgi.py
api/scripts/: FETCH_SCRIPTS.md  spider_man_2002.txt
thrivesight_core/: __init__.py  cluster_engine.py  context_assembly.py  coordinate_system.py  graph_agent.py  insight_engine.py  llm_prompts.py  persona_config.py  run_graph_agent.py  signal_engine.py  test_signal_pipeline.py
(+16 files in other folders)
