[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "thrivesight-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.28,<1.0",
    "neomodel>=6.0,<7.0",
    "neo4j>=5.0,<7.0",
    "jsonschema>=4.20,<5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["thrivesight_core*"]
